2012-08-05 Harvey Brydon <hbrydon@users.sourceforge.net>
    * Fix VS2010 C4251 warnings (bug #3554666)
    * Fix VS2010 "_WIN32_WINNT not defined..." warnings (bug #3554667).
    * Fix W4 C4100 warnings in TestPlugIn.h (bug #2912630)
    * Add VS2010 project and build files (bug #3554670) - largely based on the
      VS2008 effort from A.Dent
    * Update version string (bug #2983798)
    * Add VS2010 deployment project (BuildMSI.vdproj) and changes to support
      files to build project installer (cppunit_1_12_2.msi).

2012-06-22 Baptiste Lepilleur <blep@users.sourceforge.net>
    * include/cppunit/portability/FloatingPoint.h:
    * configure.in:
    * INSTALL-unix: Fixed build on Solaris/Sun Studio (configure issues). 
      Applied patch from bug #3483400 & #3483396. Updated build instructions.
      Added missing include <ieeefp.h> required to use finite() on 
      Solaris/Sun Studio. Added -lm to link for fabs().

2009-11-24 Baptiste Lepilleur <blep@users.sourceforge.net>
	* src/cppunit/TestResult.cpp: flush stdout & stderr in destructor
	  to avoid message loss in case of crash (bug #2832029).

	* include/cppunit/plugin/TestPlugIn.h: 
	* include/cppunit/plugin/TestPlugInDefaultImpl.h: added missing dllexport
	  for CppUnitTestPlugIn.

	* include/cppunit/portability/config-msvc6.h:
	* include/cppunit/portability/Portability.h: Added macro 
	  CPPUNIT_UNIQUE_COUNTER on MSVS 7.0+ using __COUNTER__ to
	  fix bug #2031696.
	  
	* examples/examples2008.sln: Fixed compilation issue in debug
	  configuration with VS2008 (due to incorrect configuration
	  being picked up).
	  
	* src/msvc6/testpluginrunner/TestPlugInRunnerDlg.cpp: fixed
	  memory leak in getCommandLineArguments() (bug #1721408).

	* config/ax_cxx_gcc_abi_demangle.m4:
	* src/cppunit/TypeInfoHelper.cpp: Fixed demangling of symbols on gcc 4.3
	  (bug #2796543).

2009-11-23 Baptiste Lepilleur <blep@users.sourceforge.net>

    * src/DllPlugInTester/Makefile.am:
    * examples/cppunittest/Makefile.am: